--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,8 +2,11 @@ name: Daily EPIC Earth Image
 
 on:
   schedule:
-    - cron: '0 5 * * *'  # Runs every day at 5 AM UTC
+    - cron: '0 5 * * *'  # Every day at 5 AM UTC
   workflow_dispatch:      # Allows manual triggering from GitHub interface
+
+permissions:
+  contents: write
 
 jobs:
   update:
