--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,7 +3,7 @@ name: Daily EPIC Earth Image
 on:
   schedule:
     - cron: '0 5 * * *'  # Every day at 5 AM UTC
-  workflow_dispatch:      # Allows manual triggering from GitHub interface
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -23,6 +23,9 @@ jobs:
 
       - name: Install dependencies
         run: pip install requests
+
+      - name: Export NASA API key
+        run: echo "NASA_API_KEY=${{ secrets.NASA_API_KEY }}" >> $GITHUB_ENV
 
       - name: Run update script
         run: python update.py
