--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,7 +3,7 @@ name: Update EPIC Earth Image
 on:
   schedule:
     - cron: '0 9 * * *'  # 5 AM EST = 9 AM UTC
-  workflow_dispatch:  # allow manual run
+  workflow_dispatch:
 
 jobs:
   update-daily-image:
@@ -35,5 +35,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
-          git diff --quiet && git diff --staged --quiet || git commit -m "🔄 Daily update: $(date -u +'%Y-%m-%d')"
+          git diff --quiet && git diff --staged --quiet || git commit -m "Daily update: $(date -u +'%Y-%m-%d')"
           git push
