--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -36,4 +36,5 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git diff --quiet && git diff --staged --quiet || git commit -m "Daily update: $(date -u +'%Y-%m-%d')"
+          git pull --rebase
           git push
