--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -30,11 +30,16 @@ jobs:
           echo "✅ Running epic_daily.py..."
           python scripts/epic_daily.py
 
-      - name: Commit and push if changes
+      - name: Set up Git for pushing
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git fetch origin main
+          git checkout main
+
+      - name: Commit and push if changes
+        run: |
           git add .
-          git diff --quiet && git diff --staged --quiet || git commit -m "Daily update: $(date -u +'%Y-%m-%d')"
+          git diff --quiet && git diff --staged --quiet || git commit -m "🔄 Daily update: $(date -u +'%Y-%m-%d')"
           git pull --rebase
           git push
