--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -30,16 +30,10 @@ jobs:
           echo "✅ Running epic_daily.py..."
           python scripts/epic_daily.py
 
-      - name: Set up Git for pushing
+      - name: Commit and push if changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git fetch origin main
-          git checkout main
-
-      - name: Commit and push if changes
-        run: |
           git add .
-          git diff --quiet && git diff --staged --quiet || git commit -m "🔄 Daily update: $(date -u +'%Y-%m-%d')"
-          git pull --rebase
+          git diff --quiet && git diff --staged --quiet || git commit -m "Daily update: $(date -u +'%Y-%m-%d')"
           git push
