--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: Update EPIC Earth Image
+name: Daily Automation
 
 on:
   schedule:
@@ -36,6 +36,6 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git pull --rebase --autostash
           git add .
-          git diff --quiet && git diff --staged --quiet || git commit -m "daily update: $(date -u +'%Y-%m-%d')"
+          git diff --quiet && git diff --staged --quiet || git commit -m "daily commit: $(date -u +'%Y-%m-%d')"
           git push
 
