--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Commit and push if changes
         run: |
-          git config user.name "github-actions[bot]"
+          git config user.name "Anish Nandamuri"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git pull --rebase --autostash
           git add .
