--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Commit and push if changes
         run: |
           git config user.name "Anish Nandamuri"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.email "anish.nandamuri06@gmail.com"
           git pull --rebase --autostash
           git add .
           git diff --quiet && git diff --staged --quiet || git commit -m "daily commit: $(date -u +'%Y-%m-%d')"
