--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@ name: Daily Automation
 
 on:
   schedule:
-    - cron: '0 9 * * *'  # 5 AM EST = 9 AM UTC
+    - cron: '0 13 * * *'  # 1 PM UTC = 9 AM EST
   workflow_dispatch:
 
 jobs:
