--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,10 @@ name: Daily Automation
 
 on:
   schedule:
-    - cron: '0 13 * * *'  # 1 PM UTC = 9 AM EST
+    - cron: '0 9 * * *'  # 5 AM EST
+    - cron: '0 13 * * *'  # 9 AM EST
+    - cron: '0 17 * * *'  # 1 PM EST
+    - cron: '0 19 * * *'  # 3 PM EST
   workflow_dispatch:
 
 jobs:
